--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,10 +11,18 @@ layout: default
         <i class="fa fa-cubes"  style="margin-left:10px;"></i> {{ page.category }}
     </p>
 
-
     <article class="post-content">
         {{ content }}
     </article> 
+
+    <ul class="pager">
+        {% if page.previous %}
+        <li class="previous"><a href="{{site.url}}{{ page.previous.url }}">&larr; {{ page.previous.title }} </a></li>
+        {% endif %}
+        {% if page.next %}
+        <li class="next"><a href="{{site.url}}{{ page.next.url }}">{{ page.next.title }} &rarr;</a></li>
+        {% endif %}
+    </ul>
 
     <div id="disqus_thread"></div>
     <script type="text/javascript">
