--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,14 +2,18 @@
 layout: default
 ---
 <div class="post">
+    
+    <div class="container_perso">
 
-  <header class="post-header">
-   
-    <h1>{{ page.title }}</h1>
-  </header>
+        <header class="post-header">
 
-  <article class="post-content">
-  {{ content }}
-  </article>
+            <h1>{{ page.title }}</h1>
+        </header>
+
+        <article class="post-content">
+            {{ content }}
+        </article>
+
+    </div>
 
 </div>
