--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,21 +1,8 @@
 ---
 layout: default
 ---
-<div class='col-sm-12 col-md-8'>
-    <div class="caption title">
-        {{ page.title }}
-    </div>
-    <p class="subtitle">
-        <i class="fa fa-user"></i> Maxime
-        <i class="fa fa-calendar" style="margin-left: 10px;"></i> {{page.date|date_to_long_string}}
-        <i class="fa fa-cubes"  style="margin-left:10px;"></i> {{ page.category }}
-    </p>
-
-    <article class="post-content">
-        {{ content }}
-    </article> 
-
-    <ul class="pager">
+<div class="row no_margin">
+    <ul class="pager col-sm-12 no_margin">
         {% if page.previous %}
         <li class="previous"><a href="{{site.url}}{{ page.previous.url }}">&larr; {{ page.previous.title }} </a></li>
         {% endif %}
@@ -23,27 +10,77 @@ layout: default
         <li class="next"><a href="{{site.url}}{{ page.next.url }}">{{ page.next.title }} &rarr;</a></li>
         {% endif %}
     </ul>
-
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'singablues'; // required: replace example with your forum shortname
-
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script');
-            dsq.type = 'text/javascript';
-            dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </div>
 
-<div class='col-sm-12 col-md-4'>
-    {% include side.html %}
+<div class="container_perso">
 
+    <div class='col-sm-12 col-md-6 col-md-offset-3'>
+        <div class="caption title">
+            {{ page.title }}
+        </div>
+        <p class="subtitle">
+            <i class="fa fa-user"></i> Maxime
+            <i class="fa fa-calendar" style="margin-left: 10px;"></i> {{page.date|date_to_long_string}}
+            <i class="fa fa-cubes"  style="margin-left:10px;"></i> {{ page.category }}
+        </p>
+
+        <article class="post-content">
+            {{ content }}
+        </article> 
+
+
+
+        <div class="other">
+            <div class='title'>Partager</div>
+            <div class="fb-like" data-href="{{ site.url }}" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+        </div>
+
+        <div class="other">
+            <div class='title'>Commenter</div>
+            <div id="disqus_thread">
+            </div>
+        </div>
+
+
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'singablues'; // required: replace example with your forum shortname
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script');
+                dsq.type = 'text/javascript';
+                dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </div>
+</div>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id))
+            return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.0";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
+
+
+<div class="row no_margin">
+    <ul class="pager col-sm-12 no_margin">
+        {% if page.previous %}
+        <li class="previous"><a href="{{site.url}}{{ page.previous.url }}">&larr; {{ page.previous.title }} </a></li>
+        {% endif %}
+        {% if page.next %}
+        <li class="next"><a href="{{site.url}}{{ page.next.url }}">{{ page.next.title }} &rarr;</a></li>
+        {% endif %}
+    </ul>
 </div>
 
 
