--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="no_margin header_container">
         <img src="{{ site.url }}image/logo.jpg" alt="logo" class="logo">
-        <a class="site_title" href="{{ site.baseurl }}/"><span class="color">S</span>inga<span class="color">B</span>lues</a>
+        <a class="site_title" href="{{ site.url}}/"><span class="color">S</span>inga<span class="color">B</span>lues</a>
     </div>
     
-    <div class="no_margin img_header" style="background-image: url('http://localhost:4000/image/DSC00124.jpg');">
+    <div class="no_margin img_header" style="background-image: url('http://herbautmax.github.io/4000/image/DSC00124.jpg');">
         
     </div>
  </header>
