--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,34 +14,41 @@ layout: default
 
 <div class="container_perso">
 
-    <div class='col-sm-12 col-md-6 col-md-offset-3'>
-        <div class="caption title">
-            {{ page.title }}
-        </div>
-        <p class="subtitle">
-            <i class="fa fa-user"></i> Maxime
-            <i class="fa fa-calendar" style="margin-left: 10px;"></i> {{page.date|date_to_long_string}}
-            <i class="fa fa-cubes"  style="margin-left:10px;"></i> {{ page.category }}
-        </p>
+    <div class='col-sm-12 col-md-8 col-md-offset-2'>
 
-        <article class="post-content">
-            {{ content }}
-        </article> 
+        <div class="row white">
+            <div class="caption title_post">
+                {{ page.title }}
+            </div>
+            <p class="subtitle">
+                <i class="fa fa-user"></i> Maxime
+                <i class="fa fa-calendar" style="margin-left: 10px;"></i> {{page.date|date_to_long_string}}
+                <i class="fa fa-cubes"  style="margin-left:10px;"></i> {{ page.category }}
+            </p>
 
-
-
-        <div class="other">
-            <div class='title'>Partager</div>
-            <div class="fb-like" data-href="{{ site.url }}" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+            <article class="post-content">
+                {{ content }}
+            </article> 
         </div>
 
-        <div class="other">
-            <div class='title'>Commenter</div>
-            <div id="disqus_thread">
+
+        <div class="row white">
+            <div class="other">
+                <div class='title'>Partager</div>
+                <div class="fb-like" data-href="{{ site.url }}" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+            </div>
+        </div>
+
+        <div class="row white">
+            <div class="other">
+                <div class='title'>Commenter</div>
+                <div id="disqus_thread">
+                </div>
             </div>
         </div>
 
 
+        <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'singablues'; // required: replace example with your forum shortname
@@ -56,6 +63,7 @@ layout: default
             })();
         </script>
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
     </div>
 </div>
 
