--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="no_margin header_container">
         <img src="{{site.baseurl}}/image/logo.jpg" alt="logo" class="logo">
-        <a class="site_title" href="{{site.baseurl}}"><span class="color">S</span>inga<span class="color">B</span>lues</a>
+        <a class="site_title" href="{{site.baseurl}}/index.html"><span class="color">S</span>inga<span class="color">B</span>lues</a>
     </div>
     
     <div class="no_margin img_header" style="background-image: url('{{site.baseurl}}/image/DSC00124.jpg');">
