home in construction

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="fr">
 <html>
 
-    {% include head.html %}
+{% include head.html %}
 
-    <body>
-        
-        {% include header.html %}
-        
-        
-        
-            {{ content }}
-    
-        
-        {% include footer.html %}
+<body>
+  {{ content }}
+  {% include script.html %}
+</body>
 
-    </body>
+
 </html>
