--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ p{
 
 @media (min-width: 992px){
   .home-main{
-    background: url('http://louisserre.com/wp-content/themes/portfolio/images/introBakground.jpg') no-repeat center center fixed;
+    background: url('https://d2am7l3wurrcf3.cloudfront.net/imagx/4cad2aec?768') no-repeat center center fixed;
   }
 }
 
