fixed collapse navbar

--- a/_includes/script.html
+++ b/_includes/script.html
@@ -44,3 +44,9 @@ $( document ).ready(function() {
   }
 });
 </script>
+
+<script type="text/javascript">
+$( ".close-nav" ).click(function() {
+$('.navbar-collapse').collapse('hide');
+});
+</script>
