finished first version

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,27 @@
-<footer class="site-footer">
 
-  
+<div class="footer1">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>Maxime Herbaut</h3>
+        <div class="social hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1a">
+          <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" class="hi-icon"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://github.com/{{ site.github_username }}" target="_blank" class="hi-icon"><i class="fa fa-github-square"></i></a>
+            <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" class="hi-icon"><i class="fa fa-twitter-square"></i> </a>
+        </div>
+      </div>
 
-</footer>
+        <div class="col-md-4">
+        <p class="p-footer"><i class="fa fa-map-marker send-icon"></i> Lille, Nord (59)</p>
+        <p class="p-footer"><i class="fa fa-phone send-icon"></i> 06 60 16 07 13</p>
+      </div>
+      <div class="col-md-4">
+        <p class="p-footer">Ce site a été développé par <strong>Maxime Herbaut</strong>
+          codé grâce à <strong>Jekyll</strong> et hébergé fièrement chez <strong>GitHub</strong>.</p>
+      </div>
+    </div>
+    <div class="copyright">
+      Auto entreprise Maxime Herbaut © 2015
+    </div>
+  </div>
+</div>
