--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   {{ content }}
 
+  {% include footer.html %}
   {% include script.html %}
 </body>
-
-
 </html>
