--- a/css/main.css
+++ b/css/main.css
@@ -308,6 +308,155 @@ display: none;
 }
 
 .real{
+  cursor: pointer;
   padding-bottom: 15px;
   padding-top: 15px;
+}
+
+.real a:hover{
+text-decoration:none;
+}
+
+.view {
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+}
+
+.view .mask, .view .content {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0
+}
+
+.view img {
+width: 100%;
+}
+
+.view h4 {
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 18px;
+    padding: 10px;
+    font-weight: 700;
+}
+
+.view p {
+    font-style: italic;
+    font-size: 14px;
+    position: relative;
+    color: #fff;
+    padding: 10px 20px 3%;
+    text-align: center
+}
+
+.view div.info {
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px 14px;
+    background-color: #b61924;
+    color: #fff;
+    box-shadow: 0 0 1px #333
+}
+
+.view div.info:hover {
+
+}
+
+.view-first img {
+    transition: all 0.2s linear;
+    min-height: 174px;
+}
+.view-first .mask {
+    opacity: 0;
+    background-color: rgba(51,51,51, 0.7);
+    transition: all 0.4s ease-in-out;
+}
+.view-first h4 {
+    transform: translateY(-100px);
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
+}
+.view-first p {
+    transform: translateY(100px);
+    opacity: 0;
+	transition: all 0.2s linear;
+}
+.view-first div.info{
+    opacity: 0;
+	transition: all 0.2s ease-in-out;
+}
+
+.view-first:hover img {
+	transform: scale(1.1);
+}
+.view-first:hover .mask {
+	opacity: 1;
+}
+.view-first:hover h4,
+.view-first:hover p,
+.view-first:hover div.info {
+    opacity: 1;
+    transform: translateY(0px);
+}
+.view-first:hover p {
+    transition-delay: 0.1s;
+}
+.view-first:hover div.info {
+    transition-delay: 0.2s;
+}
+
+.techno li{
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+h3{
+  font-size: 22px;
+  font-weight: 700;
+  margin: 0px;
+}
+
+.footer1{
+  background-color: #b61924;
+   margin-top: 60px;
+   padding-bottom: 5px;
+   padding-top: 20px;
+   color: white;
+}
+
+.p-footer{
+  color: white;
+  font-size: 16px;
+}
+
+.copyright{
+text-align: center;
+margin-top: 30px;
+}
+
+.social{
+  font-size: 50px;
+  margin-right: 20px;
+  color: white;
+}
+
+.hi-icon{
+  color: white;
+}
+
+.hi-icon:hover{
+  color: white;
+}
+
+.hi-icon:visited{
+  color: white;
+}
+
+.hi-icon:active{
+  color: white;
 }
