--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,9 @@
       <div class="col-md-4">
         <h3>Maxime Herbaut</h3>
         <div class="social hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1a">
-          <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" class="hi-icon"><i class="fa fa-linkedin-square"></i></a>
-            <a href="https://github.com/{{ site.github_username }}" target="_blank" class="hi-icon"><i class="fa fa-github-square"></i></a>
-            <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" class="hi-icon"><i class="fa fa-twitter-square"></i> </a>
+          <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://github.com/{{ site.github_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-github-square"></i></a>
+            <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-twitter-square"></i> </a>
         </div>
       </div>
 
