--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         <p class="p-footer"><i class="fa fa-phone send-icon"></i> 06 60 16 07 13</p>
       </div>
       <div class="col-md-4">
-        <p class="p-footer">Ce site a été développé par <strong>Maxime Herbaut</strong>
+        <p class="p-footer">Ce site a été développé par <a href="http://www.maximeherbaut.com/"></a><strong>Maxime Herbaut</strong></a>
           codé grâce à <strong>Jekyll</strong> et hébergé fièrement chez <strong>GitHub</strong>.</p>
       </div>
     </div>
