--- a/css/main.css
+++ b/css/main.css
@@ -439,6 +439,18 @@ text-align: center;
 margin-top: 30px;
 }
 
+.copyright a{
+color: white;
+}
+
+.copyright a:hover{
+color: white;
+}
+
+.copyright a:visited{
+color: white;
+}
+
 .social{
   font-size: 50px;
   margin-right: 20px;
