--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <div class="footer1">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <h3>Maxime Herbaut</h3>
         <div class="social hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1a">
           <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-linkedin-square"></i></a>
@@ -11,11 +11,11 @@
         </div>
       </div>
 
-        <div class="col-md-4">
+        <div class="col-sm-4">
         <p class="p-footer"><i class="fa fa-map-marker send-icon"></i> Lille, Nord (59)</p>
         <p class="p-footer"><i class="fa fa-phone send-icon"></i> 06 60 16 07 13</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <p class="p-footer">Ce site a été développé par <strong>Maxime Herbaut</strong>
           codé grâce à <strong>Jekyll</strong> et hébergé fièrement chez <strong>GitHub</strong>.</p>
       </div>
