--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,12 @@ body{
   }
 }
 
+.box-title{
+  position: relative;
+  top: 25%;
+  text-align: center;
+}
+
 h1{
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
@@ -74,12 +80,16 @@ h1{
   width: 396px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 450px) {
   h1{
-    font-family: 'Oswald', sans-serif;
     font-size: 35px;
     letter-spacing: 0px;
     width: 250px;
+    margin-bottom: 20px;
+  }
+  .box-title{
+    position: relative;
+    top: 90px;
   }
 }
 
@@ -176,12 +186,6 @@ p{
   background-size: cover;
   background-attachment: scroll;
   width: 100%;
-}
-
-.box-title{
-  position: relative;
-  top: 25%;
-  text-align: center;
 }
 
 .text{
