--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
-    <meta property="og:image" content=""/>
+    <meta property="og:image" content="{{ "/image/home.jpg" | prepend: site.baseurl }}"/>
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"/>
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="Maxime Herbaut" />
