--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,8 @@
     <meta name="msvalidate.01" content="3867FD2D9C3C3C5A55B419082D1E62F3" />
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+    <link rel="canonical" href="http://www.maximeherbaut.com/">
+    <meta property="og:url" content="http://www.maximeherbaut.com/" />
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
     <meta property="og:image" content="{{ "/image/home.jpg" | prepend: site.baseurl }}"/>
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"/>
