--- a/_includes/script.html
+++ b/_includes/script.html
@@ -50,3 +50,15 @@ $( ".close-nav" ).click(function() {
 $('.navbar-collapse').collapse('hide');
 });
 </script>
+
+<script type="text/javascript">
+$(document).ready(function () {
+    $(document).click(function (event) {
+        var clickover = $(event.target);
+        var _opened = $(".navbar-collapse").hasClass("navbar-collapse in");
+        if (_opened === true && !clickover.hasClass("navbar-toggle")) {
+            $("button.navbar-toggle").click();
+        }
+    });
+});
+</script>
