--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,64 +1,3 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-<script type="text/javascript">
-$(document).ready(function() {
-  $('.scrollTo').click( function() { // Au clic sur un élément
-    var page = $(this).attr('href'); // Page cible
-    var speed = 750; // Durée de l'animation (en ms)
-    console.log(page);
-    if (page == "#top"){
-      $('html, body').animate( { scrollTop: 0 }, speed ); // Go
-    }
-    else{
-      $('html, body').animate( { scrollTop: $(page).offset().top - 100 }, speed ); // Go
-    }
-    return false;
-  });
-});
-</script>
-
-<script type="text/javascript">
-var getUrlParameter = function getUrlParameter(sParam) {
-    var sPageURL = decodeURIComponent(window.location.search.substring(1)),
-        sURLVariables = sPageURL.split('&'),
-        sParameterName,
-        i;
-
-    for (i = 0; i < sURLVariables.length; i++) {
-        sParameterName = sURLVariables[i].split('=');
-
-        if (sParameterName[0] === sParam) {
-            return sParameterName[1] === undefined ? true : sParameterName[1];
-        }
-    }
-};
-
-$( document ).ready(function() {
-      var message = getUrlParameter('message');
-  if (message == "ok"){
-    $("#alert").show();
-  }
-  else{
-      $("#alert").hide();
-  }
-});
-</script>
-
-<script type="text/javascript">
-$( ".close-nav" ).click(function() {
-
-});
-</script>
-
-<script type="text/javascript">
-$(document).ready(function () {
-    $(document).click(function (event) {
-        var clickover = $(event.target);
-        var _opened = $(".navbar-collapse").hasClass("navbar-collapse in");
-        if (_opened === true && !clickover.hasClass("navbar-toggle")) {
-            $('.navbar-collapse').collapse('hide');
-        }
-    });
-});
-</script>
+<script src="{{ "/js/home.js" | prepend: site.baseurl }}"></script>
