--- a/css/main.css
+++ b/css/main.css
@@ -159,19 +159,19 @@ p{
   margin-top: 20px;
 }
 
-@media (max-width: 768px){
+@media (max-width: 750px){
   .home-main{
-    background: url('../image/home.jpg') no-repeat center center fixed;
+    background: url('../image/home-small.jpg') no-repeat center center fixed;
   }
 }
 
-@media (min-width: 768px){
+@media (min-width: 750px){
   .home-main{
-    background: url('../image/home.jpg') no-repeat center center fixed;
+    background: url('../image/home-medium.jpg') no-repeat center center fixed;
   }
 }
 
-@media (min-width: 992px){
+@media (min-width: 970px){
   .home-main{
     background: url('../image/home.jpg') no-repeat center center fixed;
   }
