--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="{{ "/image/home.jpg" | prepend: site.baseurl }}"/>
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"/>
     <meta property="og:locale" content="fr_FR" />
+    <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Maxime Herbaut" />
 
 
