--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 
 <div class="footer1">
   <div class="container">
-    <div class="row">
+    <div class="row" itemscope itemtype="http://schema.org/Person">
       <div class="col-sm-4">
-        <h3>Maxime Herbaut</h3>
+        <h3 itemprop="name">Maxime Herbaut</h3>
         <div class="social hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1a">
           <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-linkedin-square"></i></a>
             <a href="https://github.com/{{ site.github_username }}" target="_blank" rel="nofollow" class="hi-icon"><i class="fa fa-github-square"></i></a>
@@ -13,7 +13,7 @@
 
         <div class="col-sm-4">
         <p class="p-footer"><i class="fa fa-map-marker send-icon"></i> Lille, Nord (59)</p>
-        <p class="p-footer"><i class="fa fa-phone send-icon"></i> 06 60 16 07 13</p>
+        <p class="p-footer"><i class="fa fa-phone send-icon"></i> <span itemprop="tel">06 60 16 07 13</span></p>
       </div>
       <div class="col-sm-4">
         <p class="p-footer">Ce site a été développé par <strong>Maxime Herbaut</strong>
