--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,9 @@
     <meta property="og:url" content="http://www.maximeherbaut.com/" />
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
     <meta property="og:image" content="{{ "/image/home.jpg" | prepend: site.baseurl }}"/>
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200"/>
+    <meta property="image:height" content="800"/>
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"/>
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
