--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="http://www.maximeherbaut.com/">
     <meta property="og:url" content="http://www.maximeherbaut.com/" />
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
-    <meta property="og:image" content="{{ "/image/home.jpg" | prepend: site.baseurl }}"/>
+    <meta property="og:image" content="http://www.maximeherbaut.com/image/home.jpg"/>
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200"/>
     <meta property="image:height" content="800"/>
