--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="http://www.maximeherbaut.com/image/home.jpg"/>
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200"/>
-    <meta property="image:height" content="800"/>
+    <meta property="og:image:height" content="800"/>
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"/>
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
