--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,10 @@
     <meta name="msvalidate.01" content="3867FD2D9C3C3C5A55B419082D1E62F3" />
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-    <link rel="canonical" href="http://www.maximeherbaut.com/">
-    <meta property="og:url" content="http://www.maximeherbaut.com/" />
+    <link rel="canonical" href="http://maximeherbaut.com/">
+    <meta property="og:url" content="http://maximeherbaut.com/" />
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
-    <meta property="og:image" content="http://www.maximeherbaut.com/image/home.jpg"/>
+    <meta property="og:image" content="http://maximeherbaut.com/image/home.jpg"/>
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="800"/>
