--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="copyright">
-      Auto entreprise <a href="http://maximeherbaut.com/">Maxime Herbaut</a> © 2015
+      Auto entreprise <a href="http://www.maximeherbaut.com/">Maxime Herbaut</a> © 2015
     </div>
   </div>
 </div>
