--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,8 @@
 
         <div class="col-sm-4">
         <p class="p-footer"><i class="fa fa-map-marker send-icon"></i> Lille, Nord (59)</p>
-        <p class="p-footer"><i class="fa fa-phone send-icon"></i> <span itemprop="tel">06 60 16 07 13</span></p>
+        <p class="p-footer visible-xs"><i class="fa fa-phone send-icon"></i> <span itemprop="tel"><a href="tel://1-555-555-5555">+33 6 60 16 07 13</a></p>
+        <p class="p-footer hidden-xs"><i class="fa fa-phone send-icon"></i> <span itemprop="tel">06 60 16 07 13</span></p>
       </div>
       <div class="col-sm-4">
         <p class="p-footer">Ce site a été développé par <strong>Maxime Herbaut</strong>
