--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,9 +21,7 @@
     <!-- CSS -->
     <link rel="icon" type="image/png" href="image/maxime.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Oswald:400,700|Roboto:400,400italic,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ "/css/main-min.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ '/css/main-min.css' | prepend: site.baseurl }}">
     <!--[if lte IE 9]>
     <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
