--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="{{ '/css/second-min.css' | prepend: site.baseurl }}">
+<link href='https://fonts.googleapis.com/css?family=Oswald:400,700|Roboto:400,400italic,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="{{ "/js/home.js" | prepend: site.baseurl }}"></script>
