--- a/_includes/script.html
+++ b/_includes/script.html
@@ -11,7 +11,11 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Organization",
+  "name" : "Maxime Herbaut",
   "url" : "http://www.maximeherbaut.com",
+  "sameAs" : [ "https://fr.linkedin.com/in/maximeherbaut",
+               "https://github.com/herbautmax",
+               "https://twitter.com/MaximeHerbaut"],
   "contactPoint" : [{
     "@type" : "ContactPoint",
     "telephone" : "+336160713",
