--- a/_includes/script.html
+++ b/_includes/script.html
@@ -10,11 +10,10 @@
 <script type="application/ld+json">
 {
   "@context" : "http://schema.org",
-  "@type" : "Organization",
+  "@type" : "Person",
   "name" : "Maxime Herbaut",
   "url" : "http://www.maximeherbaut.com",
   "sameAs" : [ "https://fr.linkedin.com/in/maximeherbaut",
-               "https://github.com/herbautmax",
                "https://twitter.com/MaximeHerbaut"],
   "contactPoint" : [{
     "@type" : "ContactPoint",
