--- a/_includes/script.html
+++ b/_includes/script.html
@@ -10,7 +10,7 @@
 <script type="application/ld+json">
 {
   "@context" : "http://schema.org",
-  "@type" : "Person",
+  "@type" : "Organization",
   "name" : "Maxime Herbaut",
   "url" : "http://www.maximeherbaut.com",
   "sameAs" : [ "https://fr.linkedin.com/in/maximeherbaut",
