--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr" prefix="og: http://ogp.me/ns#">
 
-{% include head.html %}
+{% include head2.html %}
 
 <body>
 
   {{ content }}
 
-  {% include footer.html %}
-  {% include script.html %}
+  {% include script2.html %}
 </body>
 </html>
